sizing issue on mobile projects page

--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -339,7 +339,7 @@ img {
 		grid-template-rows: 40% 60%;
 		gap: 0%;
 		height: 80%;
-		top: 50%;
+		top: 45%;
 	}
 
 
